<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="News Feed"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#03A9F4"
                android:layout_centerInParent="true">
            </TextView>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:layout_below="@id/toolbar"
    app:tabTextColor="#618C8F"
    app:tabSelectedTextColor="#03A9F4"
    app:tabIndicatorHeight="5dp"
    android:backgroundTint="@color/white"
    app:tabMode="scrollable">


    <com.google.android.material.tabs.TabItem
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tab" />


    <com.google.android.material.tabs.TabItem
        android:id="@+id/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_tab" />


    <com.google.android.material.tabs.TabItem
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_tab"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science_tab"/>


    <com.google.android.material.tabs.TabItem
        android:id="@+id/entertainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entertainment_tab"/>


    <com.google.android.material.tabs.TabItem
        android:id="@+id/technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technology_tab"/>
</com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include"
        android:layout_marginTop="-2dp">

    </androidx.viewpager.widget.ViewPager>
</RelativeLayout>